--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "Kernel base (Python 3.8.5) is not usable. Check the Jupyter output tab for more information. \n",
-      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime as dt\n",
     "import pandas as pd\n",
@@ -66,31 +55,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_direction = {\"ALIMENTAIRE\":\"COW_TO\",\n",
+    "                  \"COMMODITÉS\":\"VPU\",\n",
+    "                  \"CONSOMMATION\":\"XRT\", \n",
+    "                  \"ÉNERGIE\":\"VDE\",\n",
+    "                  \"FINANCE\":\"KRE\",\n",
+    "                  \"TECHNOLOGIE\":\"VGT\",\n",
+    "                  \"STAPLES\": \"VCSAX\",\n",
+    "                  \"TRANSPORT\": \"XTN\",\n",
+    "                  \"REALESTATE\": \"VNQ\"\n",
+    "                  }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dependent_var_dict = {}\n",
+    "for elem in dict_direction:\n",
+    "    dependent_var_dict[elem] = pd.read_csv(f\"{dict_direction[elem]}.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "Kernel base (Python 3.8.5) is not usable. Check the Jupyter output tab for more information. \n",
-      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "{'ALIMENTAIRE':             Date       Open       High        Low      Close  Adj Close  \\\n",
+       " 0     2017-09-13  39.878719  39.911797  39.878719  39.900772  37.464195   \n",
+       " 1     2017-09-14  39.911797  40.033077  39.911797  40.011024  37.567715   \n",
+       " 2     2017-09-15  40.011024  40.507168  40.011024  40.507168  38.033558   \n",
+       " 3     2017-09-18  40.055126  41.488422  40.055126  41.400223  38.872078   \n",
+       " 4     2017-09-19  41.300991  41.653805  41.300991  41.565601  39.027359   \n",
+       " ...          ...        ...        ...        ...        ...        ...   \n",
+       " 1249  2022-09-06  71.110001  71.110001  68.860001  68.910004  68.910004   \n",
+       " 1250  2022-09-07  68.860001  69.470001  68.489998  69.300003  69.300003   \n",
+       " 1251  2022-09-08  69.300003  69.849998  68.699997  69.839996  69.839996   \n",
+       " 1252  2022-09-09  70.930000  70.930000  70.309998  70.769997  70.769997   \n",
+       " 1253  2022-09-12  70.839996  70.839996  68.730003  69.180000  69.180000   \n",
+       " \n",
+       "       Volume  \n",
+       " 0        544  \n",
+       " 1       1542  \n",
+       " 2       3084  \n",
+       " 3       9886  \n",
+       " 4       1088  \n",
+       " ...      ...  \n",
+       " 1249   22400  \n",
+       " 1250    5300  \n",
+       " 1251   13600  \n",
+       " 1252    9100  \n",
+       " 1253    8700  \n",
+       " \n",
+       " [1254 rows x 7 columns],\n",
+       " 'COMMODITÉS':             Date        Open        High         Low       Close   Adj Close  \\\n",
+       " 0     2017-09-13  120.629997  120.629997  119.970001  119.989998  102.832451   \n",
+       " 1     2017-09-14  120.000000  121.110001  119.639999  121.110001  103.792320   \n",
+       " 2     2017-09-15  121.099998  121.540001  120.699997  121.239998  103.903717   \n",
+       " 3     2017-09-18  121.199997  121.300003  119.389999  120.150002  102.969582   \n",
+       " 4     2017-09-19  120.279999  120.290001  119.720001  119.839996  102.703903   \n",
+       " ...          ...         ...         ...         ...         ...         ...   \n",
+       " 1253  2022-09-06  162.850006  164.360001  161.869995  162.250000  162.250000   \n",
+       " 1254  2022-09-07  162.889999  167.320007  162.889999  167.210007  167.210007   \n",
+       " 1255  2022-09-08  166.500000  168.059998  166.210007  167.089996  167.089996   \n",
+       " 1256  2022-09-09  167.919998  168.580002  166.699997  167.720001  167.720001   \n",
+       " 1257  2022-09-12  168.119995  169.550003  167.729996  169.410004  169.410004   \n",
+       " \n",
+       "       Volume  \n",
+       " 0      83800  \n",
+       " 1     101300  \n",
+       " 2      57800  \n",
+       " 3     115200  \n",
+       " 4     528700  \n",
+       " ...      ...  \n",
+       " 1253  196700  \n",
+       " 1254  208400  \n",
+       " 1255  154700  \n",
+       " 1256  116700  \n",
+       " 1257  200200  \n",
+       " \n",
+       " [1258 rows x 7 columns],\n",
+       " 'CONSOMMATION':             Date       Open       High        Low      Close  Adj Close  \\\n",
+       " 0     2017-09-13  41.180000  41.540001  41.110001  41.380001  38.346706   \n",
+       " 1     2017-09-14  41.250000  41.389999  40.939999  41.070000  38.059433   \n",
+       " 2     2017-09-15  40.610001  41.220001  40.610001  41.200001  38.349850   \n",
+       " 3     2017-09-18  41.330002  41.520000  40.910000  41.040001  38.200916   \n",
+       " 4     2017-09-19  40.939999  41.099998  40.430000  40.619999  37.809975   \n",
+       " ...          ...        ...        ...        ...        ...        ...   \n",
+       " 1253  2022-09-06  63.000000  63.230000  61.470001  62.369999  62.369999   \n",
+       " 1254  2022-09-07  62.369999  64.559998  62.270000  64.389999  64.389999   \n",
+       " 1255  2022-09-08  63.509998  64.300003  62.820000  64.250000  64.250000   \n",
+       " 1256  2022-09-09  64.570000  66.120003  64.419998  66.010002  66.010002   \n",
+       " 1257  2022-09-12  66.580002  67.750000  66.339996  67.150002  67.150002   \n",
+       " \n",
+       "        Volume  \n",
+       " 0     4615100  \n",
+       " 1     2536600  \n",
+       " 2     3830500  \n",
+       " 3     3608700  \n",
+       " 4     3968300  \n",
+       " ...       ...  \n",
+       " 1253  4694700  \n",
+       " 1254  4963300  \n",
+       " 1255  3980800  \n",
+       " 1256  3765400  \n",
+       " 1257  3913400  \n",
+       " \n",
+       " [1258 rows x 7 columns],\n",
+       " 'ÉNERGIE':             Date        Open        High         Low       Close   Adj Close  \\\n",
+       " 0     2017-09-13   89.080002   90.300003   89.080002   90.209999   74.556549   \n",
+       " 1     2017-09-14   90.440002   91.330002   90.370003   90.690002   74.953247   \n",
+       " 2     2017-09-15   90.910004   90.910004   90.209999   90.820000   75.060692   \n",
+       " 3     2017-09-18   90.620003   91.320000   90.570000   91.320000   75.473915   \n",
+       " 4     2017-09-19   91.309998   91.730003   91.260002   91.550003   75.664001   \n",
+       " ...          ...         ...         ...         ...         ...         ...   \n",
+       " 1253  2022-09-06  113.769997  114.190002  111.320000  111.690002  111.690002   \n",
+       " 1254  2022-09-07  109.239998  110.809998  108.260002  110.379997  110.379997   \n",
+       " 1255  2022-09-08  110.889999  111.550003  109.709999  111.029999  111.029999   \n",
+       " 1256  2022-09-09  113.129997  114.389999  112.320000  113.860001  113.860001   \n",
+       " 1257  2022-09-12  115.370003  116.980003  114.370003  115.830002  115.830002   \n",
+       " \n",
+       "        Volume  \n",
+       " 0      251300  \n",
+       " 1      252700  \n",
+       " 2      258700  \n",
+       " 3      407200  \n",
+       " 4      265500  \n",
+       " ...       ...  \n",
+       " 1253   594500  \n",
+       " 1254   957300  \n",
+       " 1255   697900  \n",
+       " 1256   531800  \n",
+       " 1257  1000900  \n",
+       " \n",
+       " [1258 rows x 7 columns],\n",
+       " 'FINANCE':             Date       Open       High        Low      Close  Adj Close  \\\n",
+       " 0     2017-09-13  52.490002  52.970001  52.369999  52.900002  46.941399   \n",
+       " 1     2017-09-14  52.900002  53.049999  52.279999  52.349998  46.453354   \n",
+       " 2     2017-09-15  52.070000  52.470001  51.970001  52.369999  46.654686   \n",
+       " 3     2017-09-18  52.610001  53.299999  52.590000  53.110001  47.313923   \n",
+       " 4     2017-09-19  53.110001  53.610001  53.040001  53.459999  47.625736   \n",
+       " ...          ...        ...        ...        ...        ...        ...   \n",
+       " 1253  2022-09-06  61.990002  62.299999  60.349998  60.770000  60.770000   \n",
+       " 1254  2022-09-07  60.480000  62.060001  60.430000  61.939999  61.939999   \n",
+       " 1255  2022-09-08  61.419998  63.320000  61.189999  63.270000  63.270000   \n",
+       " 1256  2022-09-09  63.849998  64.330002  63.509998  64.050003  64.050003   \n",
+       " 1257  2022-09-12  64.180000  65.010002  64.110001  64.690002  64.690002   \n",
+       " \n",
+       "        Volume  \n",
+       " 0     6760600  \n",
+       " 1     4482100  \n",
+       " 2     5243100  \n",
+       " 3     5222500  \n",
+       " 4     4314700  \n",
+       " ...       ...  \n",
+       " 1253  7262300  \n",
+       " 1254  7369100  \n",
+       " 1255  7464800  \n",
+       " 1256  5973100  \n",
+       " 1257  4787800  \n",
+       " \n",
+       " [1258 rows x 7 columns],\n",
+       " 'TECHNOLOGIE':             Date        Open        High         Low       Close   Adj Close  \\\n",
+       " 0     2017-09-13  151.860001  151.860001  151.339996  151.789993  144.225479   \n",
+       " 1     2017-09-14  151.300003  151.970001  150.899994  151.380005  143.835907   \n",
+       " 2     2017-09-15  151.240005  152.020004  150.910004  151.809998  144.244461   \n",
+       " 3     2017-09-18  152.050003  152.630005  151.500000  151.970001  144.396500   \n",
+       " 4     2017-09-19  152.320007  152.729996  151.860001  152.490005  144.890594   \n",
+       " ...          ...         ...         ...         ...         ...         ...   \n",
+       " 1253  2022-09-06  342.799988  343.670013  337.500000  339.670013  339.670013   \n",
+       " 1254  2022-09-07  340.170013  346.510010  339.000000  345.079987  345.079987   \n",
+       " 1255  2022-09-08  342.579987  348.540009  341.109985  347.160004  347.160004   \n",
+       " 1256  2022-09-09  349.989990  355.369995  349.929993  354.660004  354.660004   \n",
+       " 1257  2022-09-12  356.649994  360.339996  356.649994  360.279999  360.279999   \n",
+       " \n",
+       "       Volume  \n",
+       " 0     434200  \n",
+       " 1     231400  \n",
+       " 2     225200  \n",
+       " 3     401300  \n",
+       " 4     501200  \n",
+       " ...      ...  \n",
+       " 1253  605500  \n",
+       " 1254  549300  \n",
+       " 1255  395500  \n",
+       " 1256  308000  \n",
+       " 1257  303400  \n",
+       " \n",
+       " [1258 rows x 7 columns],\n",
+       " 'STAPLES':             Date       Open       High        Low      Close  Adj Close  \\\n",
+       " 0     2017-09-13  70.059998  70.059998  70.059998  70.059998  61.807537   \n",
+       " 1     2017-09-14  69.889999  69.889999  69.889999  69.889999  61.657551   \n",
+       " 2     2017-09-15  70.089996  70.089996  70.089996  70.089996  61.833981   \n",
+       " 3     2017-09-18  70.150002  70.150002  70.150002  70.150002  61.886925   \n",
+       " 4     2017-09-19  69.930000  69.930000  69.930000  69.930000  61.692848   \n",
+       " ...          ...        ...        ...        ...        ...        ...   \n",
+       " 1253  2022-09-06  91.620003  91.620003  91.620003  91.620003  91.620003   \n",
+       " 1254  2022-09-07  93.290001  93.290001  93.290001  93.290001  93.290001   \n",
+       " 1255  2022-09-08  93.120003  93.120003  93.120003  93.120003  93.120003   \n",
+       " 1256  2022-09-09  94.080002  94.080002  94.080002  94.080002  94.080002   \n",
+       " 1257  2022-09-12  94.459999  94.459999  94.459999  94.459999  94.459999   \n",
+       " \n",
+       "       Volume  \n",
+       " 0          0  \n",
+       " 1          0  \n",
+       " 2          0  \n",
+       " 3          0  \n",
+       " 4          0  \n",
+       " ...      ...  \n",
+       " 1253       0  \n",
+       " 1254       0  \n",
+       " 1255       0  \n",
+       " 1256       0  \n",
+       " 1257       0  \n",
+       " \n",
+       " [1258 rows x 7 columns],\n",
+       " 'TRANSPORT':             Date       Open       High        Low      Close  Adj Close  \\\n",
+       " 0     2017-09-13  58.369999  58.410000  58.139999  58.380001  55.494152   \n",
+       " 1     2017-09-14  57.880001  58.029999  57.450001  57.470001  54.629147   \n",
+       " 2     2017-09-15  57.310001  57.500000  57.169998  57.500000  54.756748   \n",
+       " 3     2017-09-18  57.619999  57.720001  57.540001  57.590000  54.842464   \n",
+       " 4     2017-09-19  57.680000  57.910000  57.430000  57.490002  54.747231   \n",
+       " ...          ...        ...        ...        ...        ...        ...   \n",
+       " 1253  2022-09-06  72.209999  72.220001  71.139999  71.849998  71.849998   \n",
+       " 1254  2022-09-07  71.699997  73.040001  71.190002  72.930000  72.930000   \n",
+       " 1255  2022-09-08  72.290001  72.879997  71.650002  72.699997  72.699997   \n",
+       " 1256  2022-09-09  73.320000  74.320000  73.260002  74.209999  74.209999   \n",
+       " 1257  2022-09-12  74.830002  75.620003  74.830002  75.230003  75.230003   \n",
+       " \n",
+       "       Volume  \n",
+       " 0      22500  \n",
+       " 1      12600  \n",
+       " 2       5600  \n",
+       " 3       6200  \n",
+       " 4       9300  \n",
+       " ...      ...  \n",
+       " 1253   23800  \n",
+       " 1254   12900  \n",
+       " 1255   16900  \n",
+       " 1256   13500  \n",
+       " 1257   19400  \n",
+       " \n",
+       " [1258 rows x 7 columns],\n",
+       " 'REALESTATE':             Date       Open       High        Low      Close  Adj Close  \\\n",
+       " 0     2017-09-13  84.720001  84.760002  84.190002  84.480003  70.056030   \n",
+       " 1     2017-09-14  84.370003  85.220001  84.169998  85.180000  70.636513   \n",
+       " 2     2017-09-15  85.129997  85.379997  84.580002  85.339996  70.769173   \n",
+       " 3     2017-09-18  85.320000  85.470001  84.610001  84.879997  70.387726   \n",
+       " 4     2017-09-19  84.949997  84.970001  84.260002  84.320000  69.923347   \n",
+       " ...          ...        ...        ...        ...        ...        ...   \n",
+       " 1253  2022-09-06  92.269997  93.099998  91.760002  92.709999  92.709999   \n",
+       " 1254  2022-09-07  92.709999  94.709999  92.669998  94.519997  94.519997   \n",
+       " 1255  2022-09-08  94.029999  95.110001  93.750000  94.779999  94.779999   \n",
+       " 1256  2022-09-09  95.080002  96.139999  94.680000  95.809998  95.809998   \n",
+       " 1257  2022-09-12  96.190002  96.919998  96.070000  96.739998  96.739998   \n",
+       " \n",
+       "        Volume  \n",
+       " 0     1840100  \n",
+       " 1     2839400  \n",
+       " 2     3172800  \n",
+       " 3     3442200  \n",
+       " 4     2916500  \n",
+       " ...       ...  \n",
+       " 1253  4591800  \n",
+       " 1254  3681100  \n",
+       " 1255  3408300  \n",
+       " 1256  4129200  \n",
+       " 1257  2737500  \n",
+       " \n",
+       " [1258 rows x 7 columns]}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict_direction = {\"ALIMENTAIRE\":\"COW.TO\",\n",
-    "                  \"COMMODITÉS\":\"VPU\",\n",
-    "                  \"CONSOMMATION\":\"XRT\", \n",
-    "                  \"ÉNERGIE\":\"^GSPE\",\n",
-    "                  \"FINANCE\":\"KRE\",\n",
-    "                  \"TECHNOLOGIE\":\"^SP500-45\",\n",
-    "                  \"STAPLES\": \"^SP500-30\",\n",
-    "                  \"AEROSPACE\": \"^DJUSAS\",\n",
-    "                  \"REALESTATE\": \"^DJUSRE\"\n",
-    "                  }\n"
+    "dependent_var_dict"
    ]
   },
   {
@@ -103,16 +354,24 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+   "hash": "5a9961badf05e855b9d0344d932914e1c5d9a89a97f24b38b95dcd35708a58ab"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
